resolve main content overflow, modify menu items

--- a/interface/src/Components/Header/Header.scss
+++ b/interface/src/Components/Header/Header.scss
@@ -29,17 +29,8 @@
     }
 }
 
-@media screen and (max-width: 444px) {
-    .header {
-        height: 99px;
-    }
-    .logo {
-        height: 88px;
-        width: 88px;
-    }
-    li {
-        font-weight: 500;
-        font-size: large;
-        margin-right: 0.66rem;
-    }
-}
+// @media screen and (max-width: 444px) {
+//     .header {
+//         height: 99px;
+//     } 
+// }
